HUDF-169 fix to ff jumpiness

--- a/FJSHUD/app/styles/dock.less
+++ b/FJSHUD/app/styles/dock.less
@@ -1,5 +1,5 @@
 .DockPanel {
-  position: relative;
+  /*position: relative;*/
   flex: 1;
   -webkit-flex: 1;
   margin-left: 10px;
@@ -20,7 +20,8 @@
   .InnerDock {
     position: absolute;
 	height: 100%;
-	width: 100%;
+	/*width: 100%;*/
+	width: 90%;
     column-width: 170px;
     -webkit-column-width: 170px;
     -moz-column-width: 170px;
